# cws80

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  appveyor.yml  generate_resources.sh
plugins/cws80/: DistrhoPluginInfo.h  Makefile  plugin.cpp  plugin.h  ui.cpp  ui.h
resources/: cws80_implementation.ods
resources/sq80/: sq80rom.hig  sq80rom.low
resources/sqdata/: extrabank1.dat.h  extrabank10.dat.h  extrabank11.dat.h  extrabank2.dat.h  extrabank3.dat.h  extrabank4.dat.h  extrabank5.dat.h  extrabank6.dat.h  extrabank7.dat.h  extrabank8.dat.h  extrabank9.dat.h  initprogram.dat.h  sq80hirom.dat.h  sq80lorom.dat.h  wave2202.dat.h  wave2203.dat.h  wave2204.dat.h  wave2205.dat.h
resources/ui/: button-skin.knob  led-off.knob  led-on.knob  slider-skin.knob  tiny-button-skin.knob
resources/ui/data/: fnt_proggy_clean.dat.h  fnt_scp_black_italic.dat.h  fnt_seg14.dat.h  im_background.dat.h  im_background2.dat.h  im_diagram.dat.h  im_logo.dat.h  sk_button.dat.h  sk_knob.dat.h  sk_led_off.dat.h  sk_led_on.dat.h  sk_slider.dat.h  sk_tiny_button.dat.h  tk_getString.dat.h
sources/cws/: cws80_data.cpp  cws80_data.h  cws80_data_banks.cpp  cws80_data_banks.h  cws80_ins.cpp  cws80_ins.h  cws80_ins_midi.cpp  cws80_ins_util.h  cws80_ins_vcm.cpp  cws80_messages.h  cws80_program.cpp  cws80_program.h  cws80_program_parameters.h  cws80_program_realfmt.cpp  cws80_program_sq8lfmt.cpp  cws80_program_textfmt.cpp
sources/cws/component/: dca.cpp  dca.h  dca4.cpp  dca4.h  env.cpp  env.h  lfo.cpp  lfo.h  osc.cpp  osc.h  sat.cpp  sat.h  tables.cpp  tables.h  vcf.cpp  vcf.h
sources/dsp/: lpcfmoog.h
sources/plugin/: plug_fx_master.h  plug_ui_master.h
sources/ui/: cws80_ui.cpp  cws80_ui.h  cws80_ui_controller.h  cws80_ui_data.h  cws80_ui_nk.cpp  cws80_ui_nk.h  cws80_ui_view.cpp  cws80_ui_view.h
sources/ui/detail/: nk_draw.cpp  nk_draw.h  nk_essential.h  nk_layout.cpp  nk_layout.h  nkg_point.h  nkg_rect.h  nkg_util.h  nkg_util.tcc  nki_image.cpp  nki_image.h  nkw_button.cpp  nkw_button.h  nkw_common.cpp  nkw_common.h  nkw_led.cpp  nkw_led.h  nkw_piano.cpp  nkw_piano.h  nkw_placeholder.cpp  nkw_placeholder.h  nkw_select.cpp  nkw_select.h  nkw_slider.cpp  nkw_slider.h  ui_helpers_native.cpp  ui_helpers_native.h  ui_helpers_tk.cpp  ui_helpers_tk.h
sources/ui/detail/device/: dev_graphics.cpp  dev_graphics.h  dev_graphics_cairo.cpp  dev_graphics_cairo.h  dev_graphics_gl.cpp  dev_graphics_gl.h  dev_input.cpp  dev_input.h  dev_input_common.h  dev_input_dpf.cpp  dev_input_dpf.h
sources/ui/detail/dynamic/: tcltk.cpp  tcltk.h
sources/utility/: arithmetic.h  attributes.h  debug.h  dynarray.h  filter.h  path.cpp  path.h  pb_alloc.h  pb_alloc.tcc  scope_guard.h  string.cpp  string.h  types.h
sources/utility/c++std/: optional.h  string_view.h
sources/utility/container/: bounded_vector.h
tests/: Makefile
tests/sources/: cws  cws80_sq8l.wpp  host_sq8l.h  host_sq8l.wpp  plots.cpp  plots.h  test_env.cpp  test_lfo.cpp  test_sq8l.wpp  utility
tools/: Makefile  bin2c.py  bin2c.ros  generate-parameters.ros
tools/sources/: cws80_data_plot.cpp  cws80_data_plot.h  cws80_tool.cpp
